Added new themes and updated licence

--- a/src/rose-pine-dawm.conf
+++ b/src/rose-pine-dawm.conf
@@ -1,41 +1,37 @@
 #
-#  rosepine-moon.conf
+#  rosepine.conf
 #  
 #  Copyright 2022 waxxx333 <waxxx@WindowsXP>
 #  Reference the filetypes files before editing this config file.
 # 
 [theme_info]
-name=Rosé Pine Moon
+name=Rosé Pine Dawn
 description=All natural pine, faux fur and a bit of soho vibes for the classy minimalist.
 version=0.2.5
 author=Isabelinc
 compat=1.22;1.23;1.23.1;1.24
 
 [named_colors]
-mantle=#191724
-base=#232136
-surface0=#2a273f
+mantle=#f2e9e1
+base=#faf4ed
+surface0=#fffaf3
 # 
-text=#e0def4
-subtext0=#908caa
-subtext1=#6e6a86
+text=#575279
+subtext1=#797593
 #
-overlay2=#26233a
-overlay1=#393552
-overlay0=#f2e9e1
+overlay1=#dfdad9
+overlay0=#9893a5
 #
-iris=#c4a7e7
-leaf=#31748f
-foam=#9ccfd8
+iris=#907aa9
+pine=#286983
 #
-gold=#f6c177
+gold=#ea9d34
 #
-pine=#3e8fb0
+foam=#56949f
 #
-rose=#ea9a97
-love=#eb6f92
-petal=#EBBCBA
-lavender=#c4a7e7
+rose=#d7827e
+love=#d7827e
+subtle=#9893a5
 
 
 [named_styles]
@@ -45,9 +41,9 @@ error=love;gold;false;true
 op=iris;base;true;false
 # Editor UI
 #  selection: words; background
-selection=pine;iris;true;true
+selection=rose;iris;false;false
 current_line=;surface0;true
-brace_good=pine;overlay1;true;true
+brace_good=foam;overlay1;true;true
 brace_bad=love;overlay1;true;true
 margin_line_number=text;base
 margin_folding=text;surface0
@@ -56,7 +52,7 @@ indent_guide=overlay1
 caret=text;;false
 marker_line=gold;gold
 marker_search=mantle;iris
-marker_mark=pine;surface0
+marker_mark=foam;surface0
 call_tips=overlay1;text;false;false
 white_space=overlay1;;true
 
@@ -68,7 +64,7 @@ comment_line_doc=comment_doc
 comment_doc_keyword=comment,bold
 comment_doc_keyword_error=comment,italic
 
-number=foam
+number=pine
 number_1=number
 number_2=number_1
 
@@ -77,27 +73,27 @@ type=rose;;flase;true;
 
 class=iris
 # def <color():>
-function=foam;;false;true;
-parameter=petal
+function=pine;;false;true;
+parameter=subtle
 
 
 keyword=default
 # def, for, in
 keyword_1=love;;false;true
 keyword_2=default
-keyword_3=petal
+keyword_3=subtle
 keyword_4=keyword_2
 
-identifier=leaf;;false;false
+identifier=iris;;false;false
 # main 
-identifier_1=subtext0;;false;false
+identifier_1=subtext1;;false;false
 identifier_2=default
 identifier_3=identifier_2
 identifier_4=identifier_2
 
-string=pine;;false;false
-string_1=petal;;false;false
-string_2=pine;;false;false
+string=foam;;false;false
+string_1=subtle;;false;false
+string_2=foam;;false;false
 string_3=default
 string_4=default
 string_eol=string_1
@@ -107,9 +103,9 @@ here_doc=string_2
 
 scalar=string_2
 label=love
-preprocessor=pine
+preprocessor=foam
 regex=rose
-operator=lavender;;true;false
+operator=iris;;true;false
 decorator=string_1
 other=default
 extra=keyword;
@@ -124,6 +120,6 @@ value=number
 entity=number
 
 # Diff
-line_added=pine
+line_added=foam
 line_removed=love
 line_changed=preprocessor
